# TrinityCore

./: CMakeLists.txt
src/common/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/game/DataStores/: DBCStores.cpp  DBCStores.h
src/server/game/DungeonFinding/: LFGMgr.cpp  LFGMgr.h
src/server/game/Entities/Object/: Object.h  ObjectGuid.h
src/server/game/Entities/Player/: Player.cpp
src/server/game/Globals/: ObjectMgr.cpp
src/server/game/Grids/Notifiers/: GridNotifiers.cpp
src/server/game/Maps/: Map.cpp
src/server/game/Profiling/: Profiling.cpp  Profiling.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h
src/server/game/Spells/Auras/: SpellAuraEffects.h  SpellAuras.h
src/server/game/World/: World.cpp
